# project2_dorofeev_konstantin_m25-555

./: .gitignore  Makefile  README.md  db_meta.json  pyproject.toml
src/primitive_db/: core.py  engine.py  utils.py
